pkg/lang/testdata/ub/config/invalid/encryption-duplicate-key-source.ub
encryption: { @key-source: env-key, @key-source: env-key }
